# FieldAnalysis

./: .gitignore  CMakeLists.txt  FieldAnalysisPass.cpp  OPERATIONS.md  README.md
llvm/lib/Transforms/FieldAnalysis/: CMakeLists.txt  FieldAnalysis.cpp
runtime/: CMakeLists.txt  libaffinity.c  libaffinity.h
test/: run_test.sh
test/blackscholes/: fa_test.json  run_blackscholes.sh
test/blackscholes/src/: Makefile  Makefile.standalone  blackscholes  hitm.txt  hitm_a.txt  hitm_aa.txt  perf.txt
test/test_structs/: fa_test.json
test/test_structs/src/: test_struct.c
tools/: analyze.py  build_dfg.py  fa_runner.py  fa_test_template.json  resolve_trace.py
